feat: Introduce project structure and documentation enhancements
- Separated configuration management into `config.py` using Pydantic for better validation.
- Moved authentication logic to `auth.py` utilizing `pyotp` for 2FA.
- Added `README.md` for comprehensive project documentation.
- Created `.gitignore` to exclude unnecessary files.
- Introduced `changelog.md` for tracking project changes.
- Added `requirements.txt` to specify project dependencies.
- Enhanced project organization by restructuring into multiple modules.

This commit improves modularity and maintainability while providing essential documentation for future development.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 requests>=2.31.0
 beautifulsoup4>=4.12.0
 pyotp>=2.9.0
-pydantic>=2.6.0
-pydantic-settings>=2.2.0  # For Pydantic v2 settings management
+pydantic>=2.11.3
+pydantic-settings>=2.9.0  # For Pydantic v2 settings management
 pytest>=8.0.0
 responses>=0.24.0
 python-dotenv>=1.0.0  # For environment variable management 
+ruff>=0.11.7
