refactor: Consolidate CLI functionality and optimize .gitignore
- Removed `bidding_cli.py` and `loan_collector.py` in favor of a unified CLI in `src/cli.py`, streamlining command-line operations for loan management and bidding.
- Enhanced `.gitignore` to exclude additional files and directories, including database and cache files, improving project cleanliness and maintainability.
- Introduced `CLEANUP_REPORT.md` to document the codebase cleanup process, detailing changes made for better organization and future development.

These changes enhance the overall structure and usability of the project, making it easier for developers to interact with the Kameo system.

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,24 @@
 # Project specific
 /logs/
 /loans.db
+*.db
+*.sqlite
+*.sqlite3
+
+# Cache directories
+__pycache__/
+.ruff_cache/
+.mypy_cache/
+.pytest_cache/
+
+# Environment files
+.env
+.env.test
+.env.local
+.env.production
 
 
 # Byte-compiled / optimized / DLL files
-__pycache__/
 *.py[cod]
 *$py.class
 
@@ -55,7 +69,6 @@ coverage.xml
 *.cover
 *.py,cover
 .hypothesis/
-.pytest_cache/
 cover/
 
 # Translations
@@ -135,7 +148,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .venv
 env/
 venv/
@@ -154,7 +166,6 @@ venv.bak/
 /site
 
 # mypy
-.mypy_cache/
 .dmypy.json
 dmypy.json
 
@@ -175,9 +186,7 @@ cython_debug/
 #.idea/
 
 # Ruff stuff:
-.ruff_cache/
 
 # PyPI configuration file
 .pypirc
 .cursorignore
-.env.test
