--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,7 @@ sqlalchemy>=2.0.0  # For database ORM
 alembic>=1.13.0  # For database migrations
 click>=8.0.0  # For CLI interface
 httpx>=0.27.0  # For async HTTP requests
+fastapi>=0.111.0
+uvicorn[standard]>=0.29.0
+playwright>=1.45.0
+pytest-playwright>=0.4.4
