--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.13.0",
+    "apscheduler>=3.11.0",
     "beautifulsoup4>=4.12.0",
     "click>=8.0.0",
+    "fastapi>=0.116.1",
     "httpx>=0.27.0",
     "pydantic>=2.11.3",
     "pydantic-settings>=2.9.0",
@@ -16,4 +18,5 @@ dependencies = [
     "responses>=0.24.0",
     "ruff>=0.11.7",
     "sqlalchemy>=2.0.0",
+    "uvicorn>=0.35.0",
 ]
